# gateway

./: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/: main.py
src/api/: __init__.py  enums.py  exception_handlers.py  utils.py
src/api/alerts/: __init__.py  global_alerts.py  place_alerts.py  schemas.py
src/api/auth/: controllers.py  schemas.py
src/api/devices/: __init__.py  actuators.py  commands.py  controllers.py  devices.py  schemas.py  sensors.py  thresholds.py
src/api/mqtt/: __init__.py  controllers.py  schemas.py
src/api/places/: __init__.py  controllers.py  schemas.py
src/api/telemetry/: controllers.py  schemas.py
src/core/: config.py  enums.py
src/dependencies/: auth.py  config.py  grpc.py
src/schemas/: auth.py  base.py
