[project]
name = "gateway"
version = "0.1.0"
description = "HTTP gateway for the PlaceBrain smart home system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.9.1",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "placebrain-contracts>=0.15.0",
    "pyjwt>=2.0.0",
    "hypercorn>=0.18.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "orjson>=3.10.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py314" 

[tool.ruff.lint]
extend-select = ["I"]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true
follow_imports = "skip"
